Comentado de metodo hecho en FormularioCursoController

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
@@ -23,6 +23,7 @@
         var contEstrella = 0;
     </script>
 
+    @* Para mostrar que se recuperan los datos *@
     @foreach (var seccion in Model.Secciones)
     {
         <label>@seccion.Titulo</label><br>
