--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Editar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Editar.cshtml
@@ -1,4 +1,4 @@
-﻿@model Opiniometro_WebApp.Models.Perfil
+﻿@model Opiniometro_WebApp.Models.EditarPerfil
 
 @{
     ViewBag.Title = "Editar";
@@ -21,7 +21,7 @@
         <h4>Perfil</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Nombre)
+        @Html.HiddenFor(model => model.NombreViejo)
 
         @if (Model.Nombre != "Administrador")
         {
@@ -30,7 +30,7 @@
                 <div class="col-md-10">
 
                     @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.Nombre, null, new { @class = "text-danger" })
 
                 </div>
             </div>
@@ -54,7 +54,7 @@
             @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Descripcion, null, new { @class = "text-danger" })
             </div>
         </div>
         <br />
@@ -66,8 +66,4 @@
             </div>
         </div>
     </div>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
 }
