cambio de titulos
se cambia la palabra persona por usuario

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/VerPersonas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/VerPersonas.cshtml
@@ -5,7 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Personas registradas</h2>
+<h2>Usuarios registradas</h2>
+<br>
 @using (Html.BeginForm())
 {
     <p>
