--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
                             @{
                                 if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.VER_INFORMACION_PERSONAS))
                                 {
-                                    <li>@Html.ActionLink("Ver información de personas", "VerPersonas", "Admin")</li>
+                                    <li>@Html.ActionLink("Ver información de usuarios", "VerPersonas", "Admin")</li>
                                 }
                                 else
                                 {
