se hace el cambio para que se agreguen el texto del tipo de pregunta en la vista

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -143,9 +143,17 @@
                         {
                             case 1:@Html.Raw("Texto Libre");
                             break;
-                        case 3: @Html.Raw("Sí-No");
-                        break;
-                }
+                            case 2: @Html.Raw("Selección Única");
+                            break;
+                            case 3: @Html.Raw("Sí-No");
+                            break;
+                            case 4: @Html.Raw("Selección Múltiple");
+                            break;
+                            case 5: @Html.Raw("Escalar");
+                            break;
+                            case 6: @Html.Raw("Escalar especial");
+                            break;
+                        }
 
 
                     </td>
