--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Asignacion_Formulario/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Asignacion_Formulario/Index.cshtml
@@ -25,6 +25,9 @@
                 Grupo
             </th>
             <th>
+                Profesor(es)
+            </th>
+            <th>
                 Formulario
             </th>
             <th>
@@ -33,7 +36,7 @@
             <th></th>
         </tr>
 
-        @foreach (var item in Model)
+       @foreach (var item in Model)
         {
             <tr>
                 <td>
@@ -44,6 +47,14 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Grupo.Numero)
+                </td>
+                <td>
+                   @*@foreach (var profe in item.Profesor)
+                    {
+                        @Html.DisplayFor(model => profe.Persona.Nombre) <span> </span>
+                        @Html.DisplayFor(model => profe.Persona.Apellido1) <span> </span>
+                        @Html.DisplayFor(model => profe.Persona.Apellido2) <br>
+                    }*@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Formulario.CodigoFormulario) @Html.DisplayFor(modelItem => item.Formulario.Nombre)
