--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Escalar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Escalar.cshtml
@@ -1,13 +1,13 @@
 ﻿@*@model Opiniometro_WebApp.Models.FormularioPorCurso*@
 
-@*@{
+@{
     ViewBag.Title = "Escalar";
-}*@
+}
 
     @*<script src="~/Scripts/FormularioDelCurso.js"></script>*@
 
 <fieldset>
-    @foreach (var rango in Model)
+    @foreach (var opcion in Model)
     {
          <br><input type="radio" name="rango" value="@opcion" id="@opcion"><label>@opcion</label>
     }
