--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/VerPersonas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/VerPersonas.cshtml
@@ -1,12 +1,18 @@
-﻿@{
+﻿
+
+@{
     ViewBag.Title = "VerPersonas";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2>Personas registradas</h2>
+
+<h2>Usuarios registradas</h2>
+<br>
 @using (Html.BeginForm())
 {
     <p>
+
         <div class="form-group, form-inline">
+
             Nombre:
             @Html.TextBox("nom")
             Cédula:
@@ -19,25 +25,30 @@
 <table class="table">
     <tr>
         <th>
+
             Cédula
         </th>
         <th>
-            Nombre
+            Primer nombre
         </th>
         <th>
+            Segundo nombre
+        </th>
+        <th>
+
             Primer apellido
         </th>
         <th>
+
             Segundo apellido
         </th>
         <th>
+
             Correo Institucional
-        </th>
-        <th>
-            Dirección
         </th>
         <th></th>
     </tr>
+
     @foreach (var item in Model)
     {
         <tr>
@@ -45,7 +56,10 @@
                 @item.persona.Cedula
             </td>
             <td>
-                @item.persona.Nombre
+                @item.persona.Nombre1
+            </td>
+            <td>
+                @item.persona.Nombre2
             </td>
             <td>
                 @item.persona.Apellido1
@@ -57,12 +71,10 @@
                 @item.usuario.CorreoInstitucional
             </td>
             <td>
-                @item.persona.Direccion
-            </td>
-            <td>
                 @Html.ActionLink("Editar", "Editar", new { id = item.persona.Cedula }, new { @class = "btn btn-default" })
 
             </td>
         </tr>
     }
+
 </table>
