Cambios a la vista de CrearUsuario

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/CrearUsuario.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/CrearUsuario.cshtml
@@ -17,62 +17,72 @@
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            <h4>Editar Usuario</h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-horizontal">
+        <h4>Editar Usuario</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Persona.Cedula, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-3">
-                    @Html.EditorFor(model => model.Persona.Cedula, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Persona.Cedula, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Persona.Nombre1, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-3">
-                    @Html.EditorFor(model => model.Persona.Nombre1, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Persona.Nombre1, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <!--@Html.LabelFor(model => model.Persona.Apellido1, htmlAttributes: new { @class = "control-label col-md-2" })-->
-                <label for="model.Apellido1" class="control-label col-md-2"> Primer Apellido </label>
-                <div class="col-md-3">
-                    @Html.EditorFor(model => model.Persona.Apellido1, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Persona.Apellido1, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <!--@Html.LabelFor(model => model.Persona.Apellido2, htmlAttributes: new { @class = "control-label col-md-2" })-->
-                <label for="model.Apellido2" class="control-label col-md-2"> Segundo Apellido </label>
-                <div class="col-md-3">
-                    @Html.EditorFor(model => model.Persona.Apellido2, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Persona.Apellido2, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Usuario.CorreoInstitucional, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-3">
-                    @Html.EditorFor(model => model.Usuario.CorreoInstitucional, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Usuario.CorreoInstitucional, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-3">
-                    <input type="submit" value="Guardar" class="btn btn-default" />
-                    @Html.ActionLink("Cancelar", "Index", "Home", "", new { @class = "btn btn-default" })
-                </div>
-            </div>
-            <div class="col-md-offset-2 col-md-3">
-
+        <div class="form-group">
+            @Html.LabelFor(model => model.Persona.Cedula, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-3">
+                @Html.EditorFor(model => model.Persona.Cedula, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Persona.Cedula, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        <div class="form-group">
+            <!-- @Html.LabelFor(model => model.Persona.Nombre1, htmlAttributes: new { @class = "control-label col-md-2" })-->
+            <label for="model.Apellido1" class="control-label col-md-2"> Primer Nombre </label>
+            <div class="col-md-3">
+                @Html.EditorFor(model => model.Persona.Nombre1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Persona.Nombre1, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <!-- @Html.LabelFor(model => model.Persona.Nombre2, htmlAttributes: new { @class = "control-label col-md-2" })-->
+            <label for="model.Apellido1" class="control-label col-md-2"> Segundo Nombre </label>
+            <div class="col-md-3">
+                @Html.EditorFor(model => model.Persona.Nombre2, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Persona.Nombre2, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <!--@Html.LabelFor(model => model.Persona.Apellido1, htmlAttributes: new { @class = "control-label col-md-2" })-->
+            <label for="model.Apellido1" class="control-label col-md-2"> Primer Apellido </label>
+            <div class="col-md-3">
+                @Html.EditorFor(model => model.Persona.Apellido1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Persona.Apellido1, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <!--@Html.LabelFor(model => model.Persona.Apellido2, htmlAttributes: new { @class = "control-label col-md-2" })-->
+            <label for="model.Apellido2" class="control-label col-md-2"> Segundo Apellido </label>
+            <div class="col-md-3">
+                @Html.EditorFor(model => model.Persona.Apellido2, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Persona.Apellido2, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Usuario.CorreoInstitucional, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-3">
+                @Html.EditorFor(model => model.Usuario.CorreoInstitucional, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Usuario.CorreoInstitucional, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-3">
+                <input type="submit" value="Guardar" class="btn btn-default" />
+                @Html.ActionLink("Cancelar", "Index", "Home", "", new { @class = "btn btn-default" })
+            </div>
+        </div>
+        <div class="col-md-offset-2 col-md-3">
+
+        </div>
+    </div>
     }
 </div>
