Arreglado el cómo se pide permiso.  Se deshabilita el cargar archivo cuando no hay permiso.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Usuario<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             @{
-                                if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.VER_INFORMACION_PERSONAS))
+                                if (permisos_usuario.verificar_permiso(IdPermiso.VER_INFORMACION_PERSONAS))
                                 {
                                     <li>@Html.ActionLink("Ver información de personas", "VerPersonas", "Admin")</li>
                                 }
@@ -82,7 +82,7 @@
                                     <li class="disabled"><a id="link_deshabilitado">Ver información de personas</a></li>
                                 }
 
-                                if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.INSERTAR_USUARIO))
+                                if (permisos_usuario.verificar_permiso(IdPermiso.INSERTAR_USUARIO))
                                 {
                                     <li>@Html.ActionLink("Insertar usuario", "CrearUsuario", "Admin")</li>
                                 }
@@ -91,14 +91,13 @@
                                     <li class="disabled"><a id="link_deshabilitado">Insertar usuario</a></li>
                                 }
 
-                                if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.INSERTAR_USUARIO))
+                                if (permisos_usuario.verificar_permiso(IdPermiso.INSERTAR_USUARIO))
                                 {
                                     <li>@Html.ActionLink("Cargar Archivo", "CargarArchivo", "Administrador")</li>
                                 }
                                 else
                                 {                                    
-                                    <li>@Html.ActionLink("Cargar Archivo", "CargarArchivo", "Administrador")</li>
-                                    <!-- <li class="disabled"><a>Cargar Archivo</a></li> -->
+                                    <li class="disabled"><a id="link_deshabilitado">Cargar Archivo</a></li>
                                 }
                             }
                         </ul>
