--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -130,9 +130,6 @@
                                                         <div id="contenedorGrafo">
                                                             <canvas id="pie_chart_@item_actual"></canvas>
                                                         </div>
-                                                        <div>
-                                                            <button type="button" id="changeGraph" onclick="refrescar(document.getElementById('pie_chart_@item_actual'))">Cambiar Gráfico</button>
-                                                        </div>
                                                         <script>
                                                         $.ajax({
                                                             type: "POST",
@@ -267,10 +264,10 @@
                                                                                         var ap2 = aData[3];
 
                                                                                             for (var data in obs) {
-                                                                                                if ('@perfil_actual' == "Admin") { //Cuando se incluye el if lo que esta dentro no se despliega incluso si la condicion es verdadera
+                                                                                                if ('@perfil_actual' == "Administrador") { //Cuando se incluye el if lo que esta dentro no se despliega incluso si la condicion es verdadera
                                                                                                     document.getElementById("obs_@item_actual").innerHTML = document.getElementById("obs_@item_actual").innerText + (obs[data]).toString() + " - " + (nom[data]).toString() + " " + (ap1[data]).toString() + " " + (ap2[data]).toString() + ".";
 
-                                                                                                } else if ('@perfil_actual' != "Admin"){
+                                                                                                } else if ('@perfil_actual' != "Administrador"){
                                                                                                     document.getElementById("obs_@item_actual").innerHTML = document.getElementById("obs_@item_actual").innerText + (obs[data]).toString() + ".<br />";
 
                                                                                                 }
