--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/VistaFormularioVParcial.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/VistaFormularioVParcial.cshtml
@@ -79,7 +79,7 @@
                                 break;
                             case 3://Tipo de pregunta texto libre.
                                 <div>
-                                    <dl class="dl-horizontal">
+                                    <dl class="col-md-4">
 
                                         <dd>
                                             <input type="checkbox" name="Si" value='Si' disabled> Sí<br>
