--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Delete.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Delete.cshtml
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SeleccionUnica.ItemId)
+            @Html.DisplayNameFor(model => model.Seleccion_Unica.ItemId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.SeleccionUnica.ItemId)
+            @Html.DisplayFor(model => model.Seleccion_Unica.ItemId)
         </dd>
 
         <dt>
