--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -3,7 +3,7 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
- 
+
 @Styles.Render("~/Content/scrollbar-tabla.css")
 @* Inclusiones necesarias para poder hacer validaciones *@
 <link href="~/Content/Site.css" rel="stylesheet" />
@@ -18,11 +18,12 @@
 
     $(document).ready(function () {
         $("#btnSave").click(function () {
+            
             $.ajax(
             {
                 type: "POST", //HTTP POST Method
                     url: "AgregarConformado", // Controller/View
-                     
+
                 data: { //Passing data
                     codigoFormulario:  @Html.Raw(Json.Encode(Model.Formulario.CodigoFormulario)),
                     nombreFormulario:  @Html.Raw(Json.Encode(Model.Formulario.Nombre)),
@@ -37,11 +38,13 @@
                             alert("Se asigno la pregunta: " + $("input:radio[name=item]:checked").val() + ", en la seccíon: "
                                 + $("input:radio[name=seccion]:checked").val()),
                                 $('#ConformadosID').html(result);
+                                location.reload();
                         } else {
                             alert("No se asigno la pregunta: " + $("input:radio[name=item]:checked").val() + ", en la seccíon: "
                                 + $("input:radio[name=seccion]:checked").val()
                                 + " porque la pregunta ya se asigno a esa sección.")
                         }
+                        
                     },
                     error: function () {
                         alert("No se asigno la pregunta: " + $("input:radio[name=item]:checked").val() + ", en la seccíon: "
@@ -141,11 +144,11 @@
                     <td>
                         @switch (item.TipoPregunta)
                         {
-                            case 1: @Html.Raw("Texto Libre");
+                            case 1:@Html.Raw("Texto Libre");
                             break;
-                            case 3: @Html.Raw("Sí-No");
-                            break;
-                        }
+                        case 3: @Html.Raw("Sí-No");
+                        break;
+                }
 
 
                     </td>
@@ -164,23 +167,23 @@
 </div>
 
 <div class="row form-group">
-    <div class="col-sm-12 text-center">      
+    <div class="col-sm-12 text-center">
         <button id="btnSave" class="btn btn-secondary m-*-auto"><span class="oi oi-arrow-left"></span> Asignar pregunta</button>
     </div>
 </div>
 
 @*<div class="row">
-    @Html.Action("SeccionesAsignadas", new
-                    {CodForm = Model.Formulario.CodigoFormulario})
-</div>*@
+        @Html.Action("SeccionesAsignadas", new
+                        {CodForm = Model.Formulario.CodigoFormulario})
+    </div>*@
 
 @*<div class="row" id="ConformadosID">
 
-    @Html.Action("VistaFormularioVParcial", new { codForm = Model.Formulario.CodigoFormulario })
+        @Html.Action("VistaFormularioVParcial", new { codForm = Model.Formulario.CodigoFormulario })
 
-</div>*@
+    </div>*@
 
- <button id ="VistaPrevia" type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalVistaPrevia">
+<button id="VistaPrevia" type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalVistaPrevia">
     Vista Previa
 </button>
 
@@ -194,7 +197,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                @Html.Partial("VistaFormularioVParcial", Model.FormularioCompleto)
+                @Html.Action("VistaFormularioVParcial", new { CodForm = Model.Formulario.CodigoFormulario })
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -207,7 +210,7 @@
 
 
 
-@Html.ActionLink("Terminar","Index", "Formulario", null, new { @class = "btn btn-default" })
+@Html.ActionLink("Terminar", "Index", "Formulario", null, new { @class = "btn btn-default" })
 
 
 
@@ -218,6 +221,16 @@
 </script>
 
 
+<script>
+    jQuery(document).ready(function () {
+
+        jQuery('#modalVistaPrevia').on('show.bs.modal', function (e) {
+            jQuery(this).removeData('bs.modal');
+                               
+        })
+
+    })
+</script>
 
 
 
