Arreglo del modelo, arreglo de las variables nombre a nombre1, cambio a transacciones de SP.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -209,14 +209,14 @@
                                                                             maintainAspectRatio: false,
                                                                             scales: { xaxes: [{ ticks: { beginAtZero: true } }] },
                                                                             legend: { display: true },
-                                                                            tooltipTemplate: "<%= value %>",
-                                                                            tooltipFillColor: "rgba(0,0,0,0)",
-                                                                            tooltipFontColor: "#444",
-                                                                            tooltipEvents: [],
-                                                                            tooltipCaretSize: 0,
-                                                                            onAnimationComplete: function () {
-                                                                                this.showToolTip(this.dataT[1], true);
-                                                                            }
+                                                                            //tooltipTemplate: "<%= value %>",
+                                                                            //tooltipFillColor: "rgba(0,0,0,0)",
+                                                                            //tooltipFontColor: "#444",
+                                                                            //tooltipEvents: [],
+                                                                            //tooltipCaretSize: 0,
+                                                                            //onAnimationComplete: function () {
+                                                                            //    this.showToolTip(this.dataT[1], true);
+                                                                            //}
                                                                         },
                                                                     })
                                                                 } else if ('@seccion.Item.TipoPregunta' == 4 || '@seccion.Item.TipoPregunta' == 5) {
